# image-to-ascii

./: .gitignore  Cargo.toml  index.html  readme.md  service-worker.js  service-worker.js.map  sync_wiki.yml
.github/workflows/: rust.yml  sync-docs-wiki.yml
backend/: .gitignore  Cargo.toml  install-image-to-ascii-backend.sh  uninstall-image-to-ascii-backend.sh
backend/src/: converter.rs  main.rs  request_logger.rs
backend/src/compressor/: gzip.rs  mod.rs  rle.rs  tests.rs
backend/src/compressor/rle/: compress.rs  decompress.rs  mod.rs  types.rs
backend/src/converter/: ascii_pixel.rs  config.rs  core.rs  error.rs  mod.rs
css/: app.4f41c347.css  app.c82d352e.css
docs/: .gitignore  backend.compression.md  root.md
docs/backend/: backend.api.md  backend.converter.md  backend.logging.md
docs/notes/: backend.configuration.md  backend.md
frontend/: package-lock.json  package.json  vue.config.js
frontend/src/: App.vue
frontend/src/components/: SettingsDrawer.vue
frontend/src/router/: index.ts
frontend/src/views/: ConverterView.vue  HomeView.vue
js/: app.0c260b73.js  app.0c260b73.js.map  app.19689d55.js  app.19689d55.js.map  app.4d8bbb32.js  app.4d8bbb32.js.map  app.5f2eb91e.js  app.5f2eb91e.js.map  app.b2b55318.js  app.b2b55318.js.map  app.f8693e19.js  app.f8693e19.js.map  chunk-vendors.285fb5a9.js  chunk-vendors.285fb5a9.js.map  chunk-vendors.de44beff.js  chunk-vendors.de44beff.js.map
src/: converter.rs  main.rs
