[package]
name = "image-to-ASCII"
version = "0.1.0"
edition = "2024"

[dependencies]
rusty-api = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
actix-multipart = "0.6"
futures-util = "0.3"
bytes = "1.5"
simplelog = "0.12"
time = "0.3"
log = "0.4"
chrono = "0.4"
flate2 = "1.0"